--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "sass": "^1.93.2",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
